# JlocalMusic

./: .gitignore  .prettierignore  BUGS_RECORD.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README-zh.md  README.md  RELEASE_v0.7.12.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
.githooks/: pre-push
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml
docs/: BUGS.md
e2e/: app.spec.ts
scripts/: generate-types.sh  sync-docs.sh  version.js
src/: App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/bindings/: AppLog.ts  Metadata.ts  PlayHistory.ts  PlaybackState.ts  PlayerState.ts  ScanResult.ts  Song.ts
src-tauri/icons/: icon.icns
src-tauri/migrations/: 20240101000001_create_songs_table.sql  20240101000002_create_liked_songs_table.sql  20240101000003_create_play_history_table.sql  20240101000004_create_hidden_songs_table.sql  20240101000005_create_settings_table.sql  20240101000006_create_logs_table.sql  20240101000007_update_play_history.sql  20240101000008_add_performance_indexes.sql  20240101000009_create_folders_table.sql
src-tauri/src/: constants.rs  database.rs  flac_decoder.rs  lyrics.rs  main.rs  metadata.rs  ncm.rs  path_validator.rs  paths.rs  player.rs  qmc.rs  scanner.rs  thumbnail.rs
src-tauri/src/commands/: common.rs  library.rs  logs.rs  misc.rs  mod.rs  player.rs  settings.rs  song.rs
src/api/: index.ts  mock-api.ts
src/components/: ErrorBoundary.tsx  PlayerBar.tsx  Sidebar.tsx  SongItem.tsx  SongList.tsx  SongListHeader.tsx  ToastContainer.tsx  ViewHeader.tsx  songListColumns.ts
src/config/: index.ts  themes.ts
(+55 files in other folders)
